turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:12: error: value Black is not a member of object java.awt.Color
	case Color.WHITE => setCouleurSol(Color.WHITE) ;droite();avance(); c= Color.Black
                                                                                    ^